fix overflow all page,  window object in testimony

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -436,7 +436,7 @@ video {
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 350px;
+  height: 300px;
 }
 
 .testimony-carousel-inner {
